<resources>
    <string name="app_name">Repaso1eva</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="Height">Altura</string>
    <string name="weight">PESO</string>
    <string name="age">EDAD</string>
    <string name="calcular">CALCULAR</string>
    <string name="result">Resultado</string>
    <string name="recalculate">Recalcular</string>
    <string name="error">Error</string>
    <string name="title_bajo_peso">Bajo peso</string>
    <string name="description_bajo_peso">Estás por debajo de lo óptimo para tu peso y altura.</string>
    <string name="title_peso_normal">Normal</string>
    <string name="description_peso_normal">Estás en lo óptimo para tu peso y altura.</string>
    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Estás por encima de lo óptimo para tu peso y altura.</string>
    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Estás MUY por encima de lo óptimo para tu peso y altura.</string>
    <string name="boardgames">Juegos de mesa</string>
    <string name="categories">categorías</string>
    <string name="games">juegos</string>
    <string name="dialog_add_game">Añade un juego</string>
    <string name="dialog_cooperative_category">Cooperative</string>
    <string name="dialog_deckbuilding_category">Deckbuilding</string>
    <string name="dialog_eurogames_category">Eurogames</string>
    <string name="dialog_lcg_category">Living Card Games</string>
    <string name="dialog_legacy_category">Legacy</string>
    <string name="dialog_newgame_button">Nuevo juego</string>
    <string name="choose_card">Elige una barra</string>
    <string name="choose_color">Elige un color</string>
    <string name="h1_20">H1 (20%)</string>
    <string name="h2_50">H2 (50%)</string>
    <string name="h3_80">H3 (80%)</string>
    <string name="v1_20">V1 (20%)</string>
    <string name="v2_35">V2 (35%)</string>
    <string name="v3_50">V3 (50%)</string>
    <string name="v4_65">V4 (65%)</string>
    <string name="v5_80">V5 (80%)</string>
    <string name="white">Blanco</string>
    <string name="red">Rojo</string>
    <string name="orange">Naranja</string>
    <string name="yellow">Amarillo</string>
    <string name="green">Verde</string>
    <string name="cian">Cian</string>
    <string name="blue">Azul</string>
    <string name="Violet">Violeta</string>
    <string name="black">Negro</string>
    <string name="BLANCO">BLANCO</string>
    <string name="ROJO">ROJO</string>
    <string name="NARANJA">NARANJA</string>
    <string name="VERDE">VERDE</string>
    <string name="AMARILLO">AMARILLO</string>
    <string name="CIAN">CIAN</string>
    <string name="AZUL">AZUL</string>
    <string name="VIOLETA">VIOLETA</string>
    <string name="GRIS">GRIS</string>
    <string name="NEGRO">NEGRO</string>
    <string name="chooseColor">Elige un color</string>
    <string name="applyColor">Aplicar color</string>
</resources>