<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvBlanco"
            style="@style/TextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:text="@string/BLANCO" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvRojo"
            style="@style/TextView"
            android:layout_width="100dp"
            android:layout_height="200dp"
            android:background="@color/red"
            android:text="@string/ROJO"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvNaranja"
                    style="@style/TextView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@color/orange"
                    android:text="@string/NARANJA" />

                <TextView
                    android:id="@+id/tvAmarillo"
                    style="@style/TextView"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@color/yellow"
                    android:text="@string/AMARILLO" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvVerde"
                style="@style/TextView"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:background="@color/green"
                android:text="@string/VERDE" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCian"
                style="@style/TextView"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:background="@color/cian"
                android:text="@string/CIAN" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvAzul"
                    style="@style/TextView"
                    android:layout_width="100dp"
                    android:layout_height="200dp"
                    android:background="@color/blue"
                    android:text="@string/AZUL"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tvVioleta"
                    style="@style/TextView"
                    android:layout_width="100dp"
                    android:layout_height="200dp"
                    android:background="@color/violet"
                    android:text="@string/VIOLETA"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvGris"
                style="@style/TextView"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:background="@color/grey"
                android:text="@string/GRIS"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvNegro"
                style="@style/TextView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@color/black"
                android:text="@string/NEGRO"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>